<resources>
    <string name="app_name" translatable="false">Libreria</string>
    <string name="allow_manual_input" translatable="false">Allow input code manually</string>
    <string name="enable_auto_zoom" translatable="false">Enable auto-zoom feature</string>
    <string name="scan_barcode_button" translatable="false">Scan</string>
    <string name="barcode_result" translatable="false">%1$s</string>
    <string name="error_scanner_cancelled" translatable="false">Code scanner is cancelled.</string>
    <string name="error_camera_permission_not_granted" translatable="false">Camera permission is not granted.</string>
    <string name="error_app_name_unavailable" translatable="false">App name is not set.</string>
    <string name="error_default_message" translatable="false">Failed to scan code: %1$s</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="addBook">Add Book</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="isbn">ISBN: </string>
    <string name="title">Title: </string>
    <string name="author">Author: </string>
    <string name="genre">Category: </string>
    <string name="noCopies">No of Copies: </string>
    <string name="title_activity_books">BooksActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="signup_phrase">Create Your First Admin Profile to \n Access the Libreria.</string>
    <string name="login_phrase">Enter Username and Password to \n Login Libreria.</string>

    <string-array name="genre">
        <item>Select Category</item>
        <item>Fiction</item>
        <item>Non-fiction</item>
        <item>Literature</item>
        <item>Science</item>
        <item>Technology</item>
        <item>Biography</item>
        <item>Philosophy</item>
        <item>Religion</item>
        <item>Social Sciences</item>
        <item>Arts</item>
        <item>Languages</item>
        <item>Reference</item>
        <item>Periodicals</item>
        <item>Children\'s Literature</item>
    </string-array>

</resources>
