<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:padding="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80sp"
            android:gravity="center"
            android:text="@string/addBook"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtISBN"
                android:layout_width="20sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ISBN" />

            <EditText
                android:id="@+id/editTxtISBN"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <ImageButton
                android:id="@+id/btnScan"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_marginLeft="20sp"
                android:background="@color/darkBlue"
                android:onClick="onScanButtonClicked"
                app:srcCompat="@drawable/qr_code" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="20sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Title" />

            <EditText
                android:id="@+id/editTxtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAuthor"
                android:layout_width="20sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Author" />

            <EditText
                android:id="@+id/editTxtAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtGenre"
                android:layout_width="20sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Genre" />

            <EditText
                android:id="@+id/editTxtGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="15sp"
                android:text="@string/submit" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="15sp"
                android:theme="@style/Button"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>